--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,9 +16,14 @@ TARGET_LINK_LIBRARIES(closestPoint
     ${Boost_LIBRARIES}
     )
 
-ADD_CUSTOM_COMMAND(TARGET closestPoint POST_BUILD
-  COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/shapes/* ${CMAKE_BINARY_DIR}/shapes
-)
+IF(UNIX)
+  ADD_CUSTOM_TARGET(shapeSymLink ALL
+    COMMAND ${CMAKE_COMMAND} -E create_symlink ${CMAKE_SOURCE_DIR}/shapes ${CMAKE_BINARY_DIR}/shapes)
+ENDIF(UNIX)
+
+IF(WIN32)
+  FILE(COPY ${CMAKE_SOURCE_DIR}/shapes DESTINATION ${CMAKE_BINARY_DIR})
+ENDIF(WIN32)
 
 ENABLE_TESTING()
 ADD_SUBDIRECTORY(tests)
