Bounding Box OK

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,10 +2,13 @@ CMAKE_MINIMUM_REQUIRED(VERSION 3.9)
 
 PROJECT(ClosestPoint)
 
+SET(CMAKE_CXX_STANDARD 17)
+
 FIND_PACKAGE(Boost COMPONENTS program_options REQUIRED)
 INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
 
-SET(CMAKE_CXX_STANDARD 17)
+#LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
+#FIND_PACKAGE(TBB REQUIRED)
 
 ADD_EXECUTABLE(closestPoint
     src/main.cpp
@@ -14,7 +17,7 @@ ADD_EXECUTABLE(closestPoint
 
 TARGET_LINK_LIBRARIES(closestPoint
     ${Boost_LIBRARIES}
-    )
+)
 
 IF(UNIX)
   ADD_CUSTOM_TARGET(shapeSymLink ALL
@@ -27,3 +30,21 @@ ENDIF(WIN32)
 
 ENABLE_TESTING()
 ADD_SUBDIRECTORY(tests)
+
+OPTION(BUILD_DOC "Build documentation" ON)
+FIND_PACKAGE(Doxygen)
+IF(DOXYGEN_FOUND)
+  IF(BUILD_DOC)
+    SET(DOXYGEN_IN ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in)
+    SET(DOXYGEN_OUT ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile.in)
+    CONFIGURE_FILE(${DOXYGEN_IN} ${DOXYGEN_OUT} @ONLY)
+    ADD_CUSTOM_TARGET(doc
+      COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYGEN_OUT}
+      WORKING_DIRECTORY ${CMAKE_CURRENT_BINDARY_DIR}
+      COMMENT "Generate the documentation using Doxygen"
+      VERBATIM
+    )
+  ENDIF(BUILD_DOC)
+ELSE(DOXYGEN_FOUND)
+  MESSAGE("You need doxygen to generate the documentation of this project")
+ENDIF(DOXYGEN_FOUND)
