--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,7 @@ SET(CMAKE_CXX_STANDARD 17)
 FIND_PACKAGE(Boost COMPONENTS program_options REQUIRED)
 INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
 
-#LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
-#FIND_PACKAGE(TBB REQUIRED)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/libs/libsimdpp)
 
 ADD_EXECUTABLE(closestPoint
     src/main.cpp
