We're now using Eigen

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,13 @@ SET(CMAKE_CXX_STANDARD 17)
 FIND_PACKAGE(Boost COMPONENTS program_options unit_test_framework REQUIRED)
 INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
 
-INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/libs/libsimdpp)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/libs/eigen)
+
+INCLUDE(CheckCXXCompilerFlag)
+CHECK_CXX_COMPILER_FLAG("-march=native" COMPILER_SUPPORTS_MARCH_NATIVE)
+IF(COMPILER_SUPPORTS_MARCH_NATIVE)
+  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native")
+ENDIF()
 
 ADD_EXECUTABLE(closestPoint
     src/main.cpp
