--- a/.travis.yml
+++ b/.travis.yml
@@ -15,10 +15,11 @@ addons:
       - doxygen
       - python3.8
       - python3-pip
+      - python-pygments
 
 script:
   - sudo pip3 install --upgrade pip
-  - sudo pip3 install Jinja2 Pygments
+  - sudo pip3 install Jinja2
   - git clone https://github.com/mosra/m.css.git
   - python3.8 m.css/documentation/doxygen.py Doxyfile-mcss
   #- doxygen Doxyfile.in
