--- a/.travis.yml
+++ b/.travis.yml
@@ -52,5 +52,5 @@ matrix:
         - cd build 
         - cmake ..
         - make -j 2
-        - gzip shapes/*
+        - gunzip shapes/*
         - ctest
