Changed to c++ 14 & Small function optimization

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,12 +2,14 @@ CMAKE_MINIMUM_REQUIRED(VERSION 3.9)
 
 PROJECT(ClosestPoint)
 
-SET(CMAKE_CXX_STANDARD 17)
+SET(CMAKE_CXX_STANDARD 14)
 
 FIND_PACKAGE(Boost COMPONENTS program_options unit_test_framework REQUIRED)
 INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
 
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/libs/eigen)
+
+SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 INCLUDE(CheckCXXCompilerFlag)
 CHECK_CXX_COMPILER_FLAG("-march=native" COMPILER_SUPPORTS_MARCH_NATIVE)
